selfhost/test/typechecker/lambda/error_type_mismatch.1.out
Error at %FILE_NAME%:1:24
Type mismatch
  |  val f: (Int) => Int = (a: Float) => 123
                            ^
Expected: Int
but instead found: Float
