selfhost/test/typechecker/lambda/error_type_mismatch.1.abra
val f: (Int) => Int = (a: Float) => 123